--- a/trunk/cwinux/example/echo/echo_client/Makefile.am
+++ b/trunk/cwinux/example/echo/echo_client/Makefile.am
@@ -14,7 +14,7 @@ cwx_echo_client_SOURCES = \
 	CwxEchoClientConfig.cpp
 cwx_echo_client_LDADD=
 cwx_echo_client_LDFLAGS =-L@cwinux_dir@/lib 
-LIBS=-lcwxapp -lcwxnet -lcwxcmn -lpthread -ldl -lrt
+LIBS=-lcwxapp -lcwxnet -lcwxcmn -lpthread -lz -ldl -lrt
 INCLUDES=-I@cwinux_dir@/include/app -I@cwinux_dir@/include/cmn -I@cwinux_dir@/include/net 
 
 ## Clean up template repositories, etc.
