--- a/trunk/cwinux/example/echo/echo_client/Makefile.in
+++ b/trunk/cwinux/example/echo/echo_client/Makefile.in
@@ -104,7 +104,7 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
-LIBS = -lcwxapp -lcwxnet -lcwxcmn -lpthread -ldl -lrt
+LIBS = -lcwxapp -lcwxnet -lcwxcmn -lpthread -lz -ldl -lrt
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
