--- a/trunk/cwinux/lib/cmn/src/Makefile.in
+++ b/trunk/cwinux/lib/cmn/src/Makefile.in
@@ -59,10 +59,12 @@ LTLIBRARIES = $(lib_LTLIBRARIES)
 libcwxcmn_la_LIBADD =
 am_libcwxcmn_la_OBJECTS = libcwxcmn_la-CwxCharPool.lo \
 	libcwxcmn_la-CwxFile.lo libcwxcmn_la-CwxMsgBlock.lo \
-	libcwxcmn_la-CwxPackageReader.lo libcwxcmn_la-CwxTaskBoard.lo \
-	libcwxcmn_la-CwxTss.lo libcwxcmn_la-CwxCommander.lo \
-	libcwxcmn_la-CwxGbkUnicodeMap.lo libcwxcmn_la-CwxMsgHead.lo \
-	libcwxcmn_la-CwxPackageWriter.lo libcwxcmn_la-CwxThread.lo \
+	libcwxcmn_la-CwxPackageReader.lo \
+	libcwxcmn_la-CwxPackageReaderEx.lo \
+	libcwxcmn_la-CwxTaskBoard.lo libcwxcmn_la-CwxTss.lo \
+	libcwxcmn_la-CwxCommander.lo libcwxcmn_la-CwxGbkUnicodeMap.lo \
+	libcwxcmn_la-CwxMsgHead.lo libcwxcmn_la-CwxPackageWriter.lo \
+	libcwxcmn_la-CwxPackageWriterEx.lo libcwxcmn_la-CwxThread.lo \
 	libcwxcmn_la-CwxCommon.lo libcwxcmn_la-CwxGbkUnicodeMapDat.lo \
 	libcwxcmn_la-CwxMsgQueue.lo libcwxcmn_la-CwxRwIdLocker.lo \
 	libcwxcmn_la-CwxThreadPool.lo libcwxcmn_la-CwxDate.lo \
@@ -72,9 +74,9 @@ am_libcwxcmn_la_OBJECTS = libcwxcmn_la-CwxCharPool.lo \
 	libcwxcmn_la-CwxMutexLock.lo libcwxcmn_la-CwxSingleton.lo \
 	libcwxcmn_la-CwxThreadPoolMgr.lo libcwxcmn_la-CwxEscapeUtil.lo \
 	libcwxcmn_la-CwxMemLineReader.lo libcwxcmn_la-CwxPackage.lo \
-	libcwxcmn_la-CwxSingletonMgr.lo libcwxcmn_la-CwxTimeValue.lo \
-	libcwxcmn_la-CwxCrc32.lo libcwxcmn_la-CwxIniParse.lo \
-	libcwxcmn_la-CwxMd5.lo
+	libcwxcmn_la-CwxPackageEx.lo libcwxcmn_la-CwxSingletonMgr.lo \
+	libcwxcmn_la-CwxTimeValue.lo libcwxcmn_la-CwxCrc32.lo \
+	libcwxcmn_la-CwxIniParse.lo libcwxcmn_la-CwxMd5.lo
 libcwxcmn_la_OBJECTS = $(am_libcwxcmn_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -199,12 +201,14 @@ libcwxcmn_la_SOURCES = \
 	CwxFile.cpp\
 	CwxMsgBlock.cpp\
 	CwxPackageReader.cpp\
+	CwxPackageReaderEx.cpp\
 	CwxTaskBoard.cpp\
 	CwxTss.cpp\
 	CwxCommander.cpp\
 	CwxGbkUnicodeMap.cpp\
 	CwxMsgHead.cpp\
 	CwxPackageWriter.cpp\
+	CwxPackageWriterEx.cpp\
 	CwxThread.cpp\
 	CwxCommon.cpp\
 	CwxGbkUnicodeMapDat.cpp\
@@ -224,6 +228,7 @@ libcwxcmn_la_SOURCES = \
 	CwxEscapeUtil.cpp\
 	CwxMemLineReader.cpp\
 	CwxPackage.cpp\
+	CwxPackageEx.cpp\
 	CwxSingletonMgr.cpp\
 	CwxTimeValue.cpp\
 	CwxCrc32.cpp\
@@ -280,10 +285,16 @@ cwxcmninclude_HEADERS = \
     ../include/CwxMutexLock.inl\
     ../include/CwxPackage.h\
     ../include/CwxPackage.inl\
+    ../include/CwxPackageEx.h\
+    ../include/CwxPackageEx.inl\
     ../include/CwxPackageReader.h\
     ../include/CwxPackageReader.inl\
+    ../include/CwxPackageReaderEx.h\
+    ../include/CwxPackageReaderEx.inl\
     ../include/CwxPackageWriter.h\
     ../include/CwxPackageWriter.inl\
+    ../include/CwxPackageWriterEx.h\
+    ../include/CwxPackageWriterEx.inl\
     ../include/CwxPost.h\
     ../include/CwxPre.h\
     ../include/CwxReplMachine.h\
@@ -417,8 +428,11 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxMutexIdLocker.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxMutexLock.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxPackage.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxPackageEx.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxPackageReader.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxPackageReaderEx.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxPackageWriter.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxPackageWriterEx.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxRwIdLocker.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxRwLock.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libcwxcmn_la-CwxSingleton.Plo@am__quote@
@@ -480,6 +494,13 @@ libcwxcmn_la-CwxPackageReader.lo: CwxPackageReader.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libcwxcmn_la-CwxPackageReader.lo `test -f 'CwxPackageReader.cpp' || echo '$(srcdir)/'`CwxPackageReader.cpp
 
+libcwxcmn_la-CwxPackageReaderEx.lo: CwxPackageReaderEx.cpp
+@am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libcwxcmn_la-CwxPackageReaderEx.lo -MD -MP -MF "$(DEPDIR)/libcwxcmn_la-CwxPackageReaderEx.Tpo" -c -o libcwxcmn_la-CwxPackageReaderEx.lo `test -f 'CwxPackageReaderEx.cpp' || echo '$(srcdir)/'`CwxPackageReaderEx.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libcwxcmn_la-CwxPackageReaderEx.Tpo" "$(DEPDIR)/libcwxcmn_la-CwxPackageReaderEx.Plo"; else rm -f "$(DEPDIR)/libcwxcmn_la-CwxPackageReaderEx.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxPackageReaderEx.cpp' object='libcwxcmn_la-CwxPackageReaderEx.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libcwxcmn_la-CwxPackageReaderEx.lo `test -f 'CwxPackageReaderEx.cpp' || echo '$(srcdir)/'`CwxPackageReaderEx.cpp
+
 libcwxcmn_la-CwxTaskBoard.lo: CwxTaskBoard.cpp
 @am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libcwxcmn_la-CwxTaskBoard.lo -MD -MP -MF "$(DEPDIR)/libcwxcmn_la-CwxTaskBoard.Tpo" -c -o libcwxcmn_la-CwxTaskBoard.lo `test -f 'CwxTaskBoard.cpp' || echo '$(srcdir)/'`CwxTaskBoard.cpp; \
 @am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libcwxcmn_la-CwxTaskBoard.Tpo" "$(DEPDIR)/libcwxcmn_la-CwxTaskBoard.Plo"; else rm -f "$(DEPDIR)/libcwxcmn_la-CwxTaskBoard.Tpo"; exit 1; fi
@@ -521,6 +542,13 @@ libcwxcmn_la-CwxPackageWriter.lo: CwxPackageWriter.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxPackageWriter.cpp' object='libcwxcmn_la-CwxPackageWriter.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libcwxcmn_la-CwxPackageWriter.lo `test -f 'CwxPackageWriter.cpp' || echo '$(srcdir)/'`CwxPackageWriter.cpp
+
+libcwxcmn_la-CwxPackageWriterEx.lo: CwxPackageWriterEx.cpp
+@am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libcwxcmn_la-CwxPackageWriterEx.lo -MD -MP -MF "$(DEPDIR)/libcwxcmn_la-CwxPackageWriterEx.Tpo" -c -o libcwxcmn_la-CwxPackageWriterEx.lo `test -f 'CwxPackageWriterEx.cpp' || echo '$(srcdir)/'`CwxPackageWriterEx.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libcwxcmn_la-CwxPackageWriterEx.Tpo" "$(DEPDIR)/libcwxcmn_la-CwxPackageWriterEx.Plo"; else rm -f "$(DEPDIR)/libcwxcmn_la-CwxPackageWriterEx.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxPackageWriterEx.cpp' object='libcwxcmn_la-CwxPackageWriterEx.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libcwxcmn_la-CwxPackageWriterEx.lo `test -f 'CwxPackageWriterEx.cpp' || echo '$(srcdir)/'`CwxPackageWriterEx.cpp
 
 libcwxcmn_la-CwxThread.lo: CwxThread.cpp
 @am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libcwxcmn_la-CwxThread.lo -MD -MP -MF "$(DEPDIR)/libcwxcmn_la-CwxThread.Tpo" -c -o libcwxcmn_la-CwxThread.lo `test -f 'CwxThread.cpp' || echo '$(srcdir)/'`CwxThread.cpp; \
@@ -654,6 +682,13 @@ libcwxcmn_la-CwxPackage.lo: CwxPackage.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxPackage.cpp' object='libcwxcmn_la-CwxPackage.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libcwxcmn_la-CwxPackage.lo `test -f 'CwxPackage.cpp' || echo '$(srcdir)/'`CwxPackage.cpp
+
+libcwxcmn_la-CwxPackageEx.lo: CwxPackageEx.cpp
+@am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libcwxcmn_la-CwxPackageEx.lo -MD -MP -MF "$(DEPDIR)/libcwxcmn_la-CwxPackageEx.Tpo" -c -o libcwxcmn_la-CwxPackageEx.lo `test -f 'CwxPackageEx.cpp' || echo '$(srcdir)/'`CwxPackageEx.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/libcwxcmn_la-CwxPackageEx.Tpo" "$(DEPDIR)/libcwxcmn_la-CwxPackageEx.Plo"; else rm -f "$(DEPDIR)/libcwxcmn_la-CwxPackageEx.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxPackageEx.cpp' object='libcwxcmn_la-CwxPackageEx.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libcwxcmn_la-CwxPackageEx.lo `test -f 'CwxPackageEx.cpp' || echo '$(srcdir)/'`CwxPackageEx.cpp
 
 libcwxcmn_la-CwxSingletonMgr.lo: CwxSingletonMgr.cpp
 @am__fastdepCXX_TRUE@	if $(LIBTOOL) --tag=CXX --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libcwxcmn_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libcwxcmn_la-CwxSingletonMgr.lo -MD -MP -MF "$(DEPDIR)/libcwxcmn_la-CwxSingletonMgr.Tpo" -c -o libcwxcmn_la-CwxSingletonMgr.lo `test -f 'CwxSingletonMgr.cpp' || echo '$(srcdir)/'`CwxSingletonMgr.cpp; \
