--- a/cwinux/configure.in
+++ b/cwinux/configure.in
@@ -10,6 +10,9 @@ m4_include([ax_cxx_compile_stdcxx_0x.m4])
 AC_PROG_CC
 AM_PROG_LIBTOOL
 AX_CXX_COMPILE_STDCXX_0X
+if test "x$ax_cv_cxx_compile_cxx0x_cxx" = "xyes" ; then
+    CXXFLAGS="$CXXFLAGS -std=c++0x"
+fi
 
 
 
